test/sema/negative/return1.output
return1.impala:6 col 19 - 24: error: cannot match return type
